--- a/src/app.css
+++ b/src/app.css
@@ -18,8 +18,8 @@ body {
     position: fixed;
     top: 1rem;
     right: 1rem;
-    background-color: bisque;
-    color: #000;
+    background-color: black;
+    color: orange;
     border: none;
     border-radius: 3px;
     padding: 0.5rem 1rem;
